# higher

./: LICENSE  README.md  higher.cabal  shell.nix
src/: Higher.hs
src/Higher/: Class.hs  TH.hs
test/: Main.hs
