cabal-version: 2.2

name:        higher
version:     0.1.0.0
synopsis:
  Generate higher-kinded data (HKD) types from regular data types with Template
  Haskell
description:
  Generate higher-kinded data (HKD) types from regular data types with Template
  Haskell
category:    Data, Data Structures
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/higher
copyright:   2024 Evan Relf
license:     BSD-3-Clause
license-file: LICENSE
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

common common
  build-depends: base
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , template-haskell
    , th-abstraction >= 0.6 && < 0.7
  exposed-modules: Higher

test-suite test
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , higher
    , template-haskell
